tests/valid/underscore/expr_stmt.facet
fn f(x: unrestricted isize) -> unrestricted isize {
    (drop x);
    42
}
