tests/invalid/replace_error/replace_core_type_mismatch.facet
fn f(mut x: unrestricted isize) -> unrestricted () {
    (replace x 3.14);
    ()
}
